Make kill active binde

--- a/.config/hypr/binds/binds_windows.conf
+++ b/.config/hypr/binds/binds_windows.conf
@@ -1,5 +1,5 @@
 # focusmonitor
-bind = SUPER, q, killactive
+binde = SUPER, q, killactive
 bind = SUPER SHIFT, q, forcekillactive
 bind = SUPER, semicolon, togglefloating
 # bind = SUPER, p, pseudo, # dwindle
