--- a/.config/hypr/binds/binds_system.conf
+++ b/.config/hypr/binds/binds_system.conf
@@ -1,19 +1,20 @@
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = SUPER ALT, k, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = SUPER ALT, j, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = SUPER ALT, k, exec, swayosd-client --output-volume raise
+bindel = SUPER ALT, j, exec, swayosd-client --output-volume lower
 
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-bindel = SUPER ALT, l, exec, brightnessctl -e4 -n2 set 5%+
-bindel = SUPER ALT, h, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
+bindel = SUPER ALT, l, exec, swayosd-client --brightness raise
+bindel = SUPER ALT, h, exec, swayosd-client --brightness lower 
+
+bindel = ,XF86AudioPlay, exec, swayosd-client --playerctl play-pause
+
+bindl = , XF86AudioNext, exec, swayosd-client --playerctl next
+bindl = , XF86AudioPrev, exec, swayosd-client --playerctl previous
 
 bindl = SUPER ALT, p, exec, poweroff
 bindl = SUPER ALT, r, exec, reboot
