--- a/.config/hypr/init.conf
+++ b/.config/hypr/init.conf
@@ -14,6 +14,10 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once=dbus-update-activation-environment --systemd --all
 exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 
+exec-once = hyprpaper
+
+exec-once=swayosd-server
+
 
 # exec-once = autorandr main
 # exec-once = ~/.fehbg
