Fix discord scaling

--- a/.config/hypr/init.conf
+++ b/.config/hypr/init.conf
@@ -1,7 +1,7 @@
 exec-once = hyprctl setcursor catppuccin-mocha-blue 16
 
 exec-once = qutebrowser
-exec-once = discord
+exec-once = discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 exec-once = hyprsunset
 exec-once = ashell
