Add zoom binding

--- a/.config/hypr/binds/binds_system.conf
+++ b/.config/hypr/binds/binds_system.conf
@@ -22,6 +22,8 @@ bindl = SUPER ALT, r, exec, reboot
 # ZOOM
 bind = SUPER, mouse_down, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '.float * 1.1')
 bind = SUPER, mouse_up, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '(.float * 0.9) | if . < 1 then 1 else . end')
+bind = SUPER, mouse_middle, exec, hyprctl -q keyword cursor:zoom_factor 1
+
 binde = SUPER, equal, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '.float * 1.1')
 binde = SUPER, minus, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '(.float * 0.9) | if . < 1 then 1 else . end')
 bind = SUPER SHIFT, equal, exec, hyprctl -q keyword cursor:zoom_factor 1
