Activate binding for toggle split

--- a/.config/hypr/binds/binds_windows.conf
+++ b/.config/hypr/binds/binds_windows.conf
@@ -2,8 +2,8 @@
 binde = SUPER, q, killactive
 bind = SUPER SHIFT, q, forcekillactive
 bind = SUPER, semicolon, togglefloating
-# bind = SUPER, p, pseudo, # dwindle
-# bind = SUPER, j, togglesplit, # dwindle
+# bind = SUPER SHIFT, v, pseudo, # dwindle
+bind = SUPER SHIFT, v, togglesplit, # dwindle
 
 bind = SUPER, h, movefocus, l
 bind = SUPER, l, movefocus, r
