--- a/.config/hypr/init.conf
+++ b/.config/hypr/init.conf
@@ -1,10 +1,10 @@
 exec-once = hyprctl setcursor catppuccin-mocha-blue 16
+exec-once=waybar
 
 exec-once = qutebrowser
 exec-once = discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 exec-once = hyprsunset
-exec-once = ashell
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = swaync
 
